Handle missing config by copying instead of interactively asking, make session config optional
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/tests/test_cli/templates/jinja2/main.tex
+++ b/tests/test_cli/templates/jinja2/main.tex
@@ -54,7 +54,7 @@
   \newline%
   \url{\CompanyWebsite}%
 }
-\date{\vfill\SessionStart--\SessionEnd}
+\date{}
 
 \title{\DeckTitle}
 \subtitle{\VAR{target.title}}
