--- a/tests/test_cli/templates/jinja2/print.tex
+++ b/tests/test_cli/templates/jinja2/print.tex
@@ -4,6 +4,6 @@
 
 \begin{document}
 %% for pdf_path in pdf_paths:
-\includepdf[pages=-,nup=\VAR{format}]{\VAR{pdf_path}}
+\includepdf[pages=-,nup=\V{format}]{\V{pdf_path}}
 %% endfor
 \end{document}
