Improve new parsing code and switch building to the new code
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/tests/test_cli/templates/jinja2/main.tex
+++ b/tests/test_cli/templates/jinja2/main.tex
@@ -56,7 +56,6 @@
 \date{}
 
 \title{\DeckTitle}
-\subtitle{\V{target.title}}
 
 \begin{document}
 
@@ -66,7 +65,7 @@
 \tableofcontents[subsectionstyle=hide]
 \end{frame}
 
-%% for part in target.parts:
+%% for part in parts:
 %% for section in part.sections:
 \section{\V{section.title}}
 %% for section_input in section.inputs:
